[gd_scene load_steps=11 format=3 uid="uid://cbn2gyp1cibac"]

[ext_resource type="PackedScene" uid="uid://cijyqmhnatnfp" path="res://src/components/level_map/level_map.tscn" id="1_d1p0k"]
[ext_resource type="Script" path="res://src/managers/quest_manager/quests/quest_interact_with_node.gd" id="2_4peds"]
[ext_resource type="Script" path="res://src/managers/event_manager/events/event_appear_temporarily.gd" id="5_h7ptn"]
[ext_resource type="Script" path="res://src/managers/conditions/condition_quest_finished.gd" id="6_vnqbg"]
[ext_resource type="Script" path="res://src/components/level_elements/object/map_object_interactable.gd" id="7_bwbe2"]
[ext_resource type="PackedScene" uid="uid://c0ih74a4ofoin" path="res://src/components/level_elements/object/map_object_interactable.tscn" id="7_hemp4"]
[ext_resource type="Resource" uid="uid://blfd1nv3yf40a" path="res://src/shared/data/objects/items/table1.tres" id="8_4jrpi"]
[ext_resource type="Resource" uid="uid://gum1xb3bksu3" path="res://src/components/level_elements/object/demo/demo_item.tres" id="9_umn7c"]
[ext_resource type="Resource" uid="uid://dupip7g0pcu64" path="res://src/shared/data/objects/items/melon.tres" id="9_vueu5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8ard5"]

[node name="Map" type="Node2D"]

[node name="LevelMap" parent="." instance=ExtResource("1_d1p0k")]

[node name="QuestTake" type="Node2D" parent="LevelMap/Events" index="0" node_paths=PackedStringArray("target", "move_target_after_demo")]
script = ExtResource("2_4peds")
target = NodePath("../../Objects/MapObjectInteractable2")
move_target_after_demo = NodePath("../../Objects/Tutor Move Out The Way")
take_target = true

[node name="EventAppearTemporarily" type="Node2D" parent="LevelMap/Events" index="1" node_paths=PackedStringArray("appearing_node", "end_condition")]
script = ExtResource("5_h7ptn")
appearing_node = NodePath("../../Objects/Tutorial")
end_condition = NodePath("ConditionQuestFinished")
delay_before_start = 12

[node name="ConditionQuestFinished" type="Node" parent="LevelMap/Events/EventAppearTemporarily"]
script = ExtResource("6_vnqbg")

[node name="Tutor" parent="LevelMap/Objects" index="0" groups=["tutor"]]
visible = true

[node name="Table" parent="LevelMap/Objects" index="1" instance=ExtResource("7_hemp4")]
z_index = 1
position = Vector2(110, -48)
item = ExtResource("8_4jrpi")

[node name="MapObjectInteractable" type="Node2D" parent="LevelMap/Objects" index="2"]
position = Vector2(95, -40)
script = ExtResource("7_bwbe2")
item = ExtResource("9_vueu5")

[node name="MapObjectInteractable2" type="Node2D" parent="LevelMap/Objects" index="3"]
script = ExtResource("7_bwbe2")
item = ExtResource("9_vueu5")

[node name="Tutorial" type="CanvasLayer" parent="LevelMap/Objects" index="4"]
visible = false

[node name="TutorialLabel" type="Label" parent="LevelMap/Objects/Tutorial"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -251.0
offset_right = 251.0
offset_bottom = 23.0
grow_horizontal = 2
text = "To take an object, walk to it and click it with your mouse."

[node name="Tutor Move Out The Way" type="Area2D" parent="LevelMap/Objects" index="5"]
position = Vector2(216, -34)
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelMap/Objects/Tutor Move Out The Way"]
shape = SubResource("CircleShape2D_8ard5")

[node name="MapObjectInteractable3" type="Node2D" parent="LevelMap/Objects" index="6"]
script = ExtResource("7_bwbe2")
item = ExtResource("9_umn7c")

[editable path="LevelMap"]
[editable path="LevelMap/PlayerCameraCombo"]
